Fix pills div on small screens

--- a/src/styles/ProjectDetails.css
+++ b/src/styles/ProjectDetails.css
@@ -103,7 +103,8 @@
     }
 
     .pills {
-        gap: .5em;
-
+        gap: .2em;
+        justify-content: center;
+        margin-block: 2em;
     }
 }
